# predicao_mercado_financeiro

./: Codigo Principal.ipynb  GridSearch.ipynb  GridSearch_PMF.ipynb  PredicaoMercadoFinanceiro.ipynb  README.md  pyproject.toml
