[project]
name = "predicao-mercado-financeiro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keras>=3.10.0",
    "matplotlib>=3.10.3",
    "notebook>=7.4.4",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "yfinance>=0.2.65",
]
