[project]
name = "predicao-mercado-financeiro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "notebook>=7.4.4",
    "numpy>=2.1.3",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.0",
    "tensorflow>=2.19.0",
    "yfinance>=0.2.65",
]
